--- a/Umm/package.json
+++ b/Umm/package.json
@@ -22,6 +22,7 @@
         "react": "^18.3.1",
         "react-calendar": "^5.0.0",
         "react-dom": "^18.3.1",
+        "react-kakao-maps": "^0.0.13",
         "react-router-dom": "^6.23.1",
         "react-scripts": "5.0.1",
         "recharts": "^2.12.7",
